fix margins and gap in btns

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ form {
   justify-content: center;
   text-align: center;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
 }
 
 input[type="text"] {
@@ -169,12 +169,12 @@ ul li:hover {
 .share-btn {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
 
   & svg {
     width: 22px;
     height: 22px;
-    transform: rotate(180deg);
+    transform: rotate(180deg) translateY(-1px);
   }
 }
 
